--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
    "editor.useTabStops": false,
    "editor.insertSpaces": false,
    "breadcrumbs.symbolSortOrder": "type",
-   "files.eol": "\n"
+   "files.eol": "\n",
+   "liveServer.settings.port": 5501
 }
