--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,5 @@
    "editor.useTabStops": false,
    "editor.insertSpaces": false,
    "breadcrumbs.symbolSortOrder": "type",
-   "files.eol": "\n",
-   "liveServer.settings.port": 5501,
-   "files.autoSave": "onWindowChange",
-   "terminal.integrated.defaultProfile.windows": "Git Bash"
+   "files.eol": "\n"
 }
